--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
 	<title>Serein</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
 	<script src="main.js"></script>
 
 </head>
@@ -46,48 +46,12 @@
 		<!-----------------END NAV BAR------------------------>
 	</div>
 
-	<!-------------------GALLERY---------------------------->
-	<section class="content content-1"></section>
+	<!-------------------MAIN CONTENT---------------------------->
 
-	<section class="content content-2"></section>
-	<div class="animated-title">
-		<div class="text-top">
-			<div>
-				<span>Kõik Lorem</span>
-				<span>Ipsumi kipuvad </span>
-			</div>
-		</div>
-		<div class="text-bottom">
-			<div>kindlaid Auseri</div>
-		</div>
-	</div>
-	<section class="content content-3"></section>
-	<section class="content content-4"></section>
-	<div class="animated-title-s">
-		<div class="text-top">
-			<div>
-				<span>Et Sellel</span>
-				<span>Enam Normaalne </span>
-			</div>
-		</div>
-		<div class="text-bottom">
-			<div>Jaotus Tähti</div>
-		</div>
-	</div>
-	<section class="content content-5"></section>
-	<section class="content content-6"></section>
 
 
 
 	<!---------------- FOOTER ----------------------------->
-
-
-
-
-
-
-
-	<!----------------------------------------------->
 	<footer class="flex-footer">
 
 		<ul class="footer-list-col">
@@ -109,9 +73,9 @@
 			</li>
 			<li><a href='us/blogs/support/pay.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Payment Methods</a></li>
 			<li><a href='us/blogs/support/shipping.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Shipping</a></li>
-	<li><a href='us/blogs/support/returns.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Returns</a></li>
-	<li><a href='us/blogs/support/faq.html' class="list-anchor footer-list-anchor" itemprop="significantLink">FAQ</a></li>
-	<li><a href='account.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Account</a></li>
+			<li><a href='us/blogs/support/returns.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Returns</a></li>
+			<li><a href='us/blogs/support/faq.html' class="list-anchor footer-list-anchor" itemprop="significantLink">FAQ</a></li>
+			<li><a href='account.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Account</a></li>
 		</ul>
 
 
@@ -131,7 +95,7 @@
 				rest" itemprop="significantLink"><i class="fa fa-pinterest"></i></a>
 				<a href="https://www.facebook.com" class="list-anchor" target="_blank" title="Facebook" itemprop="significantLink"><i class="fa fa-facebook"></i></a>
 				<a href="https://twitter.com" class="list-anchor" target="_blank" title="Twitter" itemprop="significantLink"><i class="fa fa-twitter"></i></a>
-					<a href="https://instagram.com/yixinsstudio" target="_blank"><i class="fa fa-instagram" style="font-size:24px;color:rgb(241, 15, 241)"></i></a>&nbsp;
+				<a href="https://instagram.com/yixinsstudio" target="_blank"><i class="fa fa-instagram" style="font-size:24px;color:rgb(241, 15, 241)"></i></a>&nbsp;
 				<a href="http://instagram.com" class="list-anchor" target="_blank" title="Instagram" itemprop="significantLink"><i class="fa fa-instagram"></i></a>
 				<a href="https://www.youtube.com" class="list-anchor" target="_blank" title="Youtube" itemprop="significantLink"><i class="fa fa-youtube"></i></a>
 				<a href="https://plus.google.com" class="list-anchor" target="_blank" title="Google Plus" itemprop="significantLink"><i class="fa fa-google-plus"></i></a>
