--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 	<title>Serein</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
 	<script src="main.js"></script>
 
 </head>
@@ -46,48 +46,68 @@
 		<!-----------------END NAV BAR------------------------>
 	</div>
 
-	<!-------------------GALLERY---------------------------->
-	<section class="content content-1"></section>
-
-	<section class="content content-2"></section>
-	<div class="animated-title">
-		<div class="text-top">
-			<div>
-				<span>Kõik Lorem</span>
-				<span>Ipsumi kipuvad </span>
+	<!-------------------MAIN CONTENT---------------------------->
+	<div class="login-wrap">
+		<div class="login-html">
+			<div class="account-login">
+				<p>ACCOUNT</p>
+			</div>
+			<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+			<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+			<div class="login-form">
+				<div class="sign-in-htm">
+					<div class="group">
+						<label for="user" class="label">Username</label>
+						<input id="user" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Password</label>
+						<input id="pass" type="password" class="input" data-type="password">
+					</div>
+					<div class="group">
+						<input id="check" type="checkbox" class="check" checked>
+						<label for="check"><span class="icon"></span> Keep me Signed in</label>
+					</div>
+					<div class="group">
+						<input type="submit" class="button" value="Sign In">
+					</div>
+					<div class="forget-pass"></div>
+					<div class="foot-lnk">
+						<a href="#forgot">Forgot Password?</a>
+					</div>
+				</div>
+				<div class="sign-up-htm">
+					<div class="group">
+						<label for="user" class="label">Username</label>
+						<input id="user" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Password</label>
+						<input id="pass" type="password" class="input" data-type="password">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Repeat Password</label>
+						<input id="pass" type="password" class="input" data-type="password">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Email Address</label>
+						<input id="pass" type="text" class="input">
+					</div>
+					<div class="group">
+						<input type="submit" class="button" value="Sign Up">
+					</div>
+					<div class="hr"></div>
+					<div class="foot-lnk">
+						<label for="tab-1">Already Member?</a>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="text-bottom">
-			<div>kindlaid Auseri</div>
-		</div>
 	</div>
-	<section class="content content-3"></section>
-	<section class="content content-4"></section>
-	<div class="animated-title-s">
-		<div class="text-top">
-			<div>
-				<span>Et Sellel</span>
-				<span>Enam Normaalne </span>
-			</div>
-		</div>
-		<div class="text-bottom">
-			<div>Jaotus Tähti</div>
-		</div>
-	</div>
-	<section class="content content-5"></section>
-	<section class="content content-6"></section>
 
 
 
 	<!---------------- FOOTER ----------------------------->
-
-
-
-
-
-
-
-	<!----------------------------------------------->
 	<footer class="flex-footer">
 
 		<ul class="footer-list-col">
@@ -109,9 +129,9 @@
 			</li>
 			<li><a href='us/blogs/support/pay.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Payment Methods</a></li>
 			<li><a href='us/blogs/support/shipping.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Shipping</a></li>
-	<li><a href='us/blogs/support/returns.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Returns</a></li>
-	<li><a href='us/blogs/support/faq.html' class="list-anchor footer-list-anchor" itemprop="significantLink">FAQ</a></li>
-	<li><a href='account.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Account</a></li>
+			<li><a href='us/blogs/support/returns.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Returns</a></li>
+			<li><a href='us/blogs/support/faq.html' class="list-anchor footer-list-anchor" itemprop="significantLink">FAQ</a></li>
+			<li><a href='account.html' class="list-anchor footer-list-anchor" itemprop="significantLink">Account</a></li>
 		</ul>
 
 
@@ -131,7 +151,7 @@
 				rest" itemprop="significantLink"><i class="fa fa-pinterest"></i></a>
 				<a href="https://www.facebook.com" class="list-anchor" target="_blank" title="Facebook" itemprop="significantLink"><i class="fa fa-facebook"></i></a>
 				<a href="https://twitter.com" class="list-anchor" target="_blank" title="Twitter" itemprop="significantLink"><i class="fa fa-twitter"></i></a>
-					<a href="https://instagram.com/yixinsstudio" target="_blank"><i class="fa fa-instagram" style="font-size:24px;color:rgb(241, 15, 241)"></i></a>&nbsp;
+				<a href="https://instagram.com/yixinsstudio" target="_blank"><i class="fa fa-instagram" style="font-size:24px;color:rgb(241, 15, 241)"></i></a>&nbsp;
 				<a href="http://instagram.com" class="list-anchor" target="_blank" title="Instagram" itemprop="significantLink"><i class="fa fa-instagram"></i></a>
 				<a href="https://www.youtube.com" class="list-anchor" target="_blank" title="Youtube" itemprop="significantLink"><i class="fa fa-youtube"></i></a>
 				<a href="https://plus.google.com" class="list-anchor" target="_blank" title="Google Plus" itemprop="significantLink"><i class="fa fa-google-plus"></i></a>
