--- a/about.html
+++ b/about.html
@@ -48,9 +48,9 @@
 
 	<!-------------------MAIN CONTENT---------------------------->
 
-
-
-
+	<section class="content content-7"></section>
+	<section class="content content-8"></section>
+	<section class="content content-9"></section>
 	<!---------------- FOOTER ----------------------------->
 	<footer class="flex-footer">
 
