--- a/us/all/all.html
+++ b/us/all/all.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/style.css">
-	<script src="main.js"></script>
+	<script src="/shop.js"></script>
 
 </head>
 
@@ -49,6 +49,14 @@
 	<!-------------------MAIN CONTENT---------------------------->
 
 
+	<div class="main-wrapper">
+	  <div class="header"><h1>Vue Shopping Cart</h1></div>
+	  <div id="vue">
+	    <cart :cart="cart" :cart-sub-total="cartSubTotal" :tax="tax" :cart-total="cartTotal" :checkout-bool="checkoutBool"></cart>
+	    <products :cart="cart" :cart-sub-total="cartSubTotal" :tax="tax" :cart-total="cartTotal" :products-data="productsData"></products>
+	    <checkout-area v-if="checkoutBool" :cart="cart" :tax="tax" :cart-sub-total="cartSubTotal" :cart-total="cartTotal" :products-data="productsData" :total-with-tax="totalWithTax"></checkout-area>
+	  </div>
+	</div>
 
 
 	<!---------------- FOOTER ----------------------------->
