--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
 						</ul>
 					</li>
 				</div>
-				<li><a href="/about.html">ABOUT</a></li>
-				<li><a href="/login.html">ACCOUNT</a></li>
-				<li><a href="/checkout.html">MY BAG</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="login.html">ACCOUNT</a></li>
+				<li><a href="checkout.html">MY BAG</a></li>
 			</ul>
 		</nav>
 		<!-----------------END NAV BAR------------------------>
