--- a/login.html
+++ b/login.html
@@ -38,9 +38,9 @@
 						</ul>
 					</li>
 				</div>
-				<li><a href="pearl/about.html">ABOUT</a></li>
-				<li><a href="pearl/login.html">ACCOUNT</a></li>
-				<li><a href="pearl/checkout.html">MY BAG</a></li>
+				<li><a href="https://www.yixin-cao.com/pearl/about.html">ABOUT</a></li>
+				<li><a href="https://www.yixin-cao.com/pearl/login.html">ACCOUNT</a></li>
+				<li><a href="https://www.yixin-cao.com/pearl/checkout.html">MY BAG</a></li>
 			</ul>
 		</nav>
 		<!-----------------END NAV BAR------------------------>
